--- a/bamboo-specs/bamboo.yml
+++ b/bamboo-specs/bamboo.yml
@@ -2,8 +2,8 @@
 version: 2
 plan:
   project-key: DOV
-  key: DOVBEMONSTERINGSTYPE
-  name: codelijst-bemonsteringstype
+  key: DOVTEKTONIEKTYPE
+  name: codelijst-tektoniektype
 
 triggers:
   - polling: 130
@@ -71,7 +71,7 @@ Release:
 ---
 version: 2
 plan:
-  key: DOV-DOVBEMONSTERINGSTYPE
+  key: DOV-DOVTEKTONIEKTYPE
 
 plan-permissions:
   - groups:
