--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,7 @@ buildNumber.properties
 .project
 # JDT-specific (Eclipse Java Development Tools)
 .classpath
+temp
+codelijst-tektoniektype.iml
+src/.env
+src/utils/setenv.js
